laid out first few containers/images

--- a/client/scss/style.scss
+++ b/client/scss/style.scss
@@ -1,5 +1,6 @@
 @import "~bootstrap/scss/bootstrap";
 
 // navbar
-@import "./scss-partials/navbar/navbar.scss"
+@import "./scss-partials/navbar/navbar.scss";
 
+@import "./scss-partials/main-content/homepage.scss";
