--- a/client/scss/style.scss
+++ b/client/scss/style.scss
@@ -1,5 +1,13 @@
 @import "~bootstrap/scss/bootstrap";
 
 // navbar
-@import "./scss-partials/navbar/navbar.scss"
+@import "./scss-partials/navbar/navbar.scss";
+
+
+
+
+
+
+//footer
+@import "./scss-partials/footer/footer.scss";
 
