--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -45,13 +45,15 @@
     </div>
 </div>
 
-<div class="container-fluid" id="main-footer-container">
-    <div class="row py-5">
-        <div class="col d-flex justify-content-around">
 
+
+            <!-- footer nav -->
+<div class="container-fluid px-5" id="main-footer-container">
+    <div class="row py-5">
+        <div class="col d-flex justify-content-between">
             <div class="wrapper">
                 <div class="row">
-                    <div class="col">
+                    <div class="col" id="sign-up">
                         <p>Sign up for our emails to get the inside scoop on special offers and new Products.</p>
                     </div>
                 </div>
@@ -69,8 +71,8 @@
                         </div>
                     </div> 
                 </div>
-                <div class="row mt-3 text-center">
-                    <div class="col-sm-6 border">
+                <div class="row mt-5">
+                    <div class="col-sm-6">
                         <a href="#">icon</a>
                         <a href="#">icon</a>
                         <a href="#">icon</a>
@@ -79,7 +81,7 @@
                 </div>
             </div>
 
-            <ul>
+            <ul class="pr-1">
                 <li><a href="#">Characters</a></li>
                 <li><a href="#">Parks</a></li>
                 <li><a href="#">Disney</a></li>
@@ -89,7 +91,7 @@
                 <li><a href="#">National Geographic</a></li>
             </ul>
         </div>
-        <div class="col border-dark border-left d-flex justify-content-around">
+        <div class="col border-dark border-left d-flex justify-content-between">
             <ul>
                 <li><a href="#">D23</a></li>
                 <li><a href="#">Careers</a></li>
@@ -112,6 +114,33 @@
                 <li><a href="#">About shopDisney</a></li>
                 <li><a href="#">Disney Visa Card</a></li>
                 <li><a href="#">Personalization Shop</a></li>
+            </ul>
+        </div>
+    </div>
+
+
+
+
+    <div class="row footer-policy-text">
+        <div class="col">
+            <ul class="ml-0 pl-0 d-flex border">
+                <li><span>Disney, All rights Reserved</span></li>
+                <li><a href="#">Terms of Use</a></li>
+                <li><a href="#">Additional Content Information</a></li>
+                <li><a href="#">Privacy Policy</a></li>
+                <li><a href="#">Your California Privacy Rights</a></li>
+                <li><a href="#">Do Not Sell My Personal Information</a></li>
+                <li><a href="#">Children's Online Privacy Policy</a></li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="row footer-policy-text mb-5">
+        <div class="col">
+            <ul class="ml-0 pl-0 d-flex nprder">
+                <li><a href="#">About Disney</a></li>
+                <li><a href="#">Interest-Based Ads</a></li>
+                <li><a href="#">California Transparency in Supply Chains Act</a></li>
             </ul>
         </div>
     </div>
