--- a/client/scss/scss-partials/main-content/homepage.scss
+++ b/client/scss/scss-partials/main-content/homepage.scss
@@ -1,6 +1,6 @@
 #top-container {
     background-image: url("https://dummyimage.com/700x400/c4d8f3/aaa");
-     height: 77vh;
+     height: 500px;
     overflow: hidden;
     background-repeat: no-repeat;
     background-position: center;
@@ -18,7 +18,7 @@
 
 #fresh-threads {
     background-image: url("https://dummyimage.com/700x400/c4d8f3/aaa");
-    height: 50vh;
+    height: 345px;
     overflow: hidden;
     background-repeat: no-repeat;
     background-position: center;
@@ -33,7 +33,7 @@
 
 #toy-savings {
     background-image: url("https://dummyimage.com/700x400/c4d8f3/aaa");
-    height: 55vh;
+    height: 380px;
     overflow: hidden;
     background-repeat: no-repeat;
     background-position: center;
@@ -48,7 +48,7 @@
 
 
 .split-image {
-    height: 50vh;
+    height: 345px;
     background-image: url("https://dummyimage.com/500x320/c4d8f3/aaa");
     overflow: hidden;
     background-position: center;
