--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -123,7 +123,7 @@
 
     <div class="row footer-policy-text">
         <div class="col">
-            <ul class="ml-0 pl-0 d-flex border">
+            <ul class="ml-0 pl-0 d-flex">
                 <li><span>Disney, All rights Reserved</span></li>
                 <li><a href="#">Terms of Use</a></li>
                 <li><a href="#">Additional Content Information</a></li>
@@ -137,7 +137,7 @@
 
     <div class="row footer-policy-text mb-5">
         <div class="col">
-            <ul class="ml-0 pl-0 d-flex nprder">
+            <ul class="ml-0 pl-0 d-flex">
                 <li><a href="#">About Disney</a></li>
                 <li><a href="#">Interest-Based Ads</a></li>
                 <li><a href="#">California Transparency in Supply Chains Act</a></li>
