--- a/client/scss/scss-partials/navbar/navbar.scss
+++ b/client/scss/scss-partials/navbar/navbar.scss
@@ -1,6 +1,6 @@
 .banner {
+    color: white;
     background-color: #0075e3;
-    color: #FFFFFF;
     font-size: 15px;
     font-weight: 300;
     
