--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -144,18 +144,18 @@
       </div>
       <div class="row mb-2"><div class="col text-center"><h5 class="modal-title mx-auto" id="">Disney account</h5></div></div>
       <div class="modal-body">
-        <form action="#">
+        <form action="/registration/show" method="POST">
           <div class="form-group mb-2 w-75 mx-auto">
-            <input type="text" class="form-control" placeholder="First Name">
+            <input type="text" class="form-control" name="firstName" placeholder="First Name">
           </div>
           <div class="form-group mb-2 w-75 mx-auto">
-            <input type="text" class="form-control" placeholder="Last Name">
+            <input type="text" class="form-control" name="lastName" placeholder="Last Name">
           </div>
           <div class="form-group mb-2 w-75 mx-auto">
-            <input type="text" class="form-control" placeholder="Email Address">
+            <input type="text" class="form-control" name="email" placeholder="Email Address">
           </div>
           <div class="form-group mb-2 w-75 mx-auto">
-            <input type="text" class="form-control" placeholder="Password">
+            <input type="text" class="form-control" name="password" placeholder="Password">
           </div>
           <div class="form-group mb-2 w-75 mx-auto">
             <input type="text" class="form-control" placeholder="Verify Password">
