--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -107,12 +107,12 @@
       </div>
       <div class="row mb-2"><div class="col text-center"><h5 class="modal-title mx-auto" id="exampleModalLabel">Disney account</h5></div></div>
       <div class="modal-body">
-        <form action="#">
+        <form action="/login" method="POST">
           <div class="form-group w-75 mx-auto mb-2">
-            <input type="text" class="form-control" placeholder="Username Or Email Address">
+            <input type="text" class="form-control" name="email" placeholder="Username Or Email Address">
           </div>
           <div class="form-group mb-2">
-            <input type="text" class="form-control w-75 mx-auto" placeholder="Password">
+            <input type="text" class="form-control w-75 mx-auto" name="password" placeholder="Password">
           </div>
           <div class="form-group text-center mb-0">
             <button class="btn btn-primary btn-lg w-75 py-3" style="background-color: #0075e3;" id="signin-btn">Sign In</button>
@@ -158,10 +158,10 @@
             <input type="text" class="form-control" name="password" placeholder="Password">
           </div>
           <div class="form-group mb-2 w-75 mx-auto">
-            <input type="text" class="form-control" placeholder="Verify Password">
+            <input type="text" class="form-control" name="verifyPassword" placeholder="Verify Password">
           </div>
           <div class="form-group mb-2 w-75 mx-auto">
-            <input type="text" class="form-control" placeholder="Birth Date mm/dd/yy">
+            <input type="text" class="form-control" id="birthdate-input" name="birthDate" placeholder="Birth Date mm/dd/yy">
           </div>
 
           <div class="modal-container w-75 mx-auto mt-4">
