create navbar user drop down (for when user is logged in)

--- a/client/scss/scss-partials/navbar/_navbar.scss
+++ b/client/scss/scss-partials/navbar/_navbar.scss
@@ -16,7 +16,16 @@
         font-size: 15px;
         font-weight: 300; 
     }
+    
+    .dropdown {
+        &:hover {
+            .dropdown-menu {
+                display: block;
+            }
+        }
+    }
 }
+
 
 #second-nav {
     a {
