--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -36,9 +36,23 @@
             <a class="navbar-brand" href="#"><img src="http://placekitten.com/150/40" alt=""></a>
       
       <ul class="navbar-nav">
-          <li class="nav-item">
-              <a class="nav-link" href="#" data-toggle="modal" data-target="#signin-modal">Sign In | Sign up</a>
+        <% if (currentUser) { %>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="userNavbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Hi <%= currentUser.firstName %> !
+            </a>
+            <div class="dropdown-menu" aria-labelledby="userNavbarDropdown">
+              <a class="dropdown-item" href="#">Info & Settings</a>
+              <a class="dropdown-item" href="#">Order History</a>
+              <a class="dropdown-item" href="#">Wish List</a>
+              <a class="dropdown-item" href="#">Sign Out</a>
+            </div>
           </li>
+        <% } else { %>
+          <li class="nav-item">
+             <a class="nav-link" href="#" data-toggle="modal" data-target="#signin-modal">Sign In | Sign up</a>
+          </li>
+        <% } %>
           <li class="nav-item">
               <a class="nav-link" href="#">My Wish List</a>
           </li>
