--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -45,7 +45,7 @@
               <a class="dropdown-item" href="#">Info & Settings</a>
               <a class="dropdown-item" href="#">Order History</a>
               <a class="dropdown-item" href="#">Wish List</a>
-              <a class="dropdown-item" href="#">Sign Out</a>
+              <a class="dropdown-item" href="/login/log-out">Sign Out</a>
             </div>
           </li>
         <% } else { %>
