--- a/views/login/login.ejs
+++ b/views/login/login.ejs
@@ -4,12 +4,22 @@
     <%- include('../partials/head') %>
 </head>
 <body>
-<%- include('../partials/header') %>
+    <%- include('../partials/header') %>
 
-<div class="container">
-    <h1><%= pageTitle %></h1>
-</div>
-
-<%- include('../partials/footer') %>
+    <div class="container-fluid border-top">
+        <div class="container mt-5 w-75">
+            <form action="/login" method="POST">
+                <div class="form-group mb-3">
+                  <input type="text" class="form-control" name="email" placeholder="Username Or Email Address">
+                </div>
+                <div class="form-group mb-3">
+                  <input type="text" class="form-control" name="password" placeholder="Password">
+                </div>
+                <div class="form-group mb-0">
+                  <button class="btn btn-primary btn-lg py-3" style="background-color: #0075e3;" id="signin-btn">Sign In</button>
+                </div>
+              </form>   
+        </div>
+    </div>
 </body>
 </html>
