--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,4 +1,4 @@
 <meta charset="UTF-8">
 <title></title>
 <link rel="stylesheet" href="/style.css">
-<title><%= pageTitle %></title>
+<title></title>
