Add 'successful login'  message to login page.

--- a/client/scss/style.scss
+++ b/client/scss/style.scss
@@ -9,3 +9,5 @@
 @import "./scss-partials/footer/footer.scss";
 
 @import "./scss-partials/main-content/homepage.scss";
+
+@import "./scss-partials/login-page/login.scss";
