--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -158,24 +158,30 @@
       </div>
       <div class="row mb-2"><div class="col text-center"><h5 class="modal-title mx-auto" id="">Disney account</h5></div></div>
       <div class="modal-body">
-        <form action="/registration/show" method="POST">
+        <form action="/registration/show" id="modal-registration-form" method="POST">
           <div class="form-group mb-2 w-75 mx-auto">
-            <input type="text" class="form-control" name="firstName" placeholder="First Name">
+            <input type="text" id="firstNameInput" class="form-control" name="firstName" placeholder="First Name">
+            <div class="invalid-feedback">Please enter your first name.</div>
           </div>
           <div class="form-group mb-2 w-75 mx-auto">
-            <input type="text" class="form-control" name="lastName" placeholder="Last Name">
+            <input type="text" id="lastNameInput" class="form-control" name="lastName" placeholder="Last Name">
+            <div class="invalid-feedback">Please enter your last name.</div>
           </div>
           <div class="form-group mb-2 w-75 mx-auto">
-            <input type="text" class="form-control" name="email" placeholder="Email Address">
+            <input type="text" id="emailInput" class="form-control" name="email" placeholder="Email Address">
+            <div class="invalid-feedback">Please enter your email address.</div>
           </div>
           <div class="form-group mb-2 w-75 mx-auto">
-            <input type="text" class="form-control" name="password" placeholder="Password">
+            <input type="text" id="passwordInput" class="form-control" name="password" placeholder="Password">
+            <div class="invalid-feedback">Please enter a password.</div>
           </div>
           <div class="form-group mb-2 w-75 mx-auto">
-            <input type="text" class="form-control" name="verifyPassword" placeholder="Verify Password">
+            <input type="text" id="verifyPasswordInput" class="form-control" name="verifyPassword" placeholder="Verify Password">
+            <div class="invalid-feedback">Please enter your new password again.</div>
           </div>
           <div class="form-group mb-2 w-75 mx-auto">
-            <input type="text" class="form-control" id="birthdate-input" name="birthDate" placeholder="Birth Date mm/dd/yy">
+            <input type="text" class="form-control" id="birthDateInput" name="birthDate" placeholder="Birth Date mm/dd/yy">
+            <div class="invalid-feedback">Birth date is required.</div>
           </div>
 
           <div class="modal-container w-75 mx-auto mt-4">
