--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -160,27 +160,27 @@
       <div class="modal-body">
         <form action="/registration/show" id="modal-registration-form" method="POST">
           <div class="form-group mb-2 w-75 mx-auto">
-            <input type="text" id="firstNameInput" class="form-control" name="firstName" placeholder="First Name">
+            <input required type="text" id="firstNameInput" class="form-control" name="firstName" placeholder="First Name">
             <div class="invalid-feedback">Please enter your first name.</div>
           </div>
           <div class="form-group mb-2 w-75 mx-auto">
-            <input type="text" id="lastNameInput" class="form-control" name="lastName" placeholder="Last Name">
+            <input required type="text" id="lastNameInput" class="form-control" name="lastName" placeholder="Last Name">
             <div class="invalid-feedback">Please enter your last name.</div>
           </div>
           <div class="form-group mb-2 w-75 mx-auto">
-            <input type="text" id="emailInput" class="form-control" name="email" placeholder="Email Address">
+            <input required type="text" id="emailInput" class="form-control" name="email" placeholder="Email Address">
             <div class="invalid-feedback">Please enter your email address.</div>
           </div>
           <div class="form-group mb-2 w-75 mx-auto">
-            <input type="text" id="passwordInput" class="form-control" name="password" placeholder="Password">
+            <input required type="text" id="passwordInput" class="form-control" name="password" placeholder="Password">
             <div class="invalid-feedback">Please enter a password.</div>
           </div>
           <div class="form-group mb-2 w-75 mx-auto">
-            <input type="text" id="verifyPasswordInput" class="form-control" name="verifyPassword" placeholder="Verify Password">
+            <input required type="text" id="verifyPasswordInput" class="form-control" name="verifyPassword" placeholder="Verify Password">
             <div class="invalid-feedback">Please enter your new password again.</div>
           </div>
           <div class="form-group mb-2 w-75 mx-auto">
-            <input type="text" class="form-control" id="birthDateInput" name="birthDate" placeholder="Birth Date mm/dd/yy">
+            <input required type="text" class="form-control" id="birthDateInput" name="birthDate" placeholder="Birth Date mm/dd/yy">
             <div class="invalid-feedback">Birth date is required.</div>
           </div>
 
