--- a/views/admin/home.ejs
+++ b/views/admin/home.ejs
@@ -5,13 +5,24 @@
     </head>
     <body>
         <%- include('../partials/header') %>
+        <div class="container-fulid border-top"></div>
 
-        <div class="container">
-            <h1><%= pageTitle %></h1>
+        <div class="container mt-5 text-center">
+            <div class="row">
+                <div class="col">
+                    <h3><a href="/admin/products/new">Create New Product</a></h3>
+                </div>
+                <div class="col">
+                    <h3><a href="/admin/products">Product List</a></h3>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+
+                </div>
+            </div>
         </div>
 
         <div class="container"></div>
-
-        <%- include('../partials/footer') %>
     </body>
 </html>
