--- a/views/admin/productForm.ejs
+++ b/views/admin/productForm.ejs
@@ -5,15 +5,40 @@
     </head>
     <body>
         <%- include('../partials/header') %>
+        <div class="container-fluid border-top">
 
-        <div class="container text-center">
-            <div class="row text-center">
-                <div class="col">
-                    <h1>Product Form</h1>
-                </div>
-            </div>
         </div>
 
+        <div class="container mt-5 w-75">
+            <div class="row text-center mb-5">
+                <div class="col">
+                    <h3><a href="/admin/products">Product List</a></h3>
+                </div>
+                <div class="col">
+                    <h3><a href="/admin">Admin Home</a></h3>
+                </div>
+
+            </div>
+            <form action="/admin/product/new">
+                <div class="form-group">
+                    <label for="productName">Name</label>
+                    <input type="text" name="productName" class="form-control">
+                </div>
+                <div class="form-group">
+                    <label for="productDescription">Description</label>
+                    <input type="text" name="prodcutDescription" class="form-control">
+                </div>
+                <div class="form-group">
+                    <label for="productPrice">Price</label>
+                    <input type="text" name="productPrice" class="form-control">
+                </div>
+                <div class="form-group">
+                    <label for="productImage">Image</label>
+                    <input type="text" name="prodcutImage" class="form-control">
+                </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
+        </div>
 
     </body>
 </html>
