create new product post request and update mongoose schema

--- a/views/admin/home.ejs
+++ b/views/admin/home.ejs
@@ -8,11 +8,11 @@
         <div class="container-fulid border-top"></div>
 
         <div class="container mt-5 text-center">
-            <div class="row">
-                <div class="col">
+            <div class="row border-bottom border-dark">
+                <div class="col admin-nav-link">
                     <h3><a href="/admin/products/new">Create New Product</a></h3>
                 </div>
-                <div class="col">
+                <div class="col admin-nav-link">
                     <h3><a href="/admin/products">Product List</a></h3>
                 </div>
             </div>
