--- a/client/scss/style.scss
+++ b/client/scss/style.scss
@@ -11,3 +11,5 @@
 @import "./scss-partials/main-content/homepage.scss";
 
 @import "./scss-partials/login-page/login.scss";
+
+@import "./scss-partials/admin/admin.scss";
