--- a/views/admin/productForm.ejs
+++ b/views/admin/productForm.ejs
@@ -26,19 +26,20 @@
                 </div>
                 <div class="form-group">
                     <label for="productDescription">Description</label>
-                    <input type="text" name="prodcutDescription" class="form-control">
+                    <input type="text" name="productDescription" class="form-control">
                 </div>
                 <div class="form-group">
                     <label for="productPrice">Price</label>
                     <input type="text" name="productPrice" class="form-control">
                 </div>
                 <div class="form-group">
-                    <label for="productImage">Image</label>
-                    <input type="text" name="prodcutImage" class="form-control">
+                    <label for="productImage">Image (ex: image.jpg)</label>
+                    <input type="text" name="productImage" class="form-control">
                 </div>
                 <button type="submit" class="btn btn-primary">Submit</button>
             </form>
         </div>
 
+        <script src="/main.bundle.js"></script> 
     </body>
 </html>
