--- a/client/scss/scss-partials/admin/admin.scss
+++ b/client/scss/scss-partials/admin/admin.scss
@@ -7,3 +7,17 @@
 		}
 	}
 }
+
+.product-list-grid {
+	.col-3 {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+	}
+	h3 {
+		font-weight: 300;
+	}
+	h6 {
+		font-weight: 300;
+	}
+}
