--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -46,6 +46,7 @@
               <a class="dropdown-item" href="#">Order History</a>
               <a class="dropdown-item" href="#">Wish List</a>
               <a class="dropdown-item" href="/login/log-out">Sign Out</a>
+              <a class="dropdown-item" href="/admin">Admin Page</a>
             </div>
           </li>
         <% } else { %>
